--- a/i3.config
+++ b/i3.config
@@ -1,21 +1,33 @@
-# me
-# comment out the line "bindsym $mod+d exec dmenu_run"
-bindsym $mod+d exec rofi -show run
-exec_always feh --bg-scale /home/user/Pictures/pic.jpg
-exec_always compton -f
+#
+# ME
+#
+bindsym $mod+d exec rofi -show run # comment out the line "bindsym $mod+d exec dmenu_run"
+exec_always feh --bg-scale /home/sysadm/Pictures/P0vh30i.jpg # https://imgur.com/gallery/Ytp5l
 exec_always vmware-user-suid-wrapper
 bindsym $mod+p spectacle -g
+exec_always compton -f --config /home/sysadm/.config/compton.conf
 
-#############################
-### GAPPING CONFIGURATION ###
-#############################
+#
+# COMPTON CONFIG
+# 
+# enter the following in ~/.config/compton.conf
+# use xprop to identify class
+# opacity-rule = [
+#   "90:class_g = 'Sublime_text' && focused",
+#   "80:class_g = 'Sublime_text' && !focused"
+# ];
+
+#
+# GAPPING CONFIGURATION
+#
 # from: https://bbs.archlinux.org/viewtopic.php?id=252775
 
 # This effectively disables the window title bars alltogether (enabling gaps/gapping)
-#for_window [class=".*"] border pixel 0
-
+for_window [class=".*"] border pixel 2
+bindsym $mod+t border normal 0 # toggle on normal border
+bindsym $mod+y border pixel 2 # toggle off normal border
 gaps inner 8
-gaps outer -2
+gaps outer 2
 
 # Smart gaps (gaps used if only more than one container on the workspace)
 #smart_gaps on
@@ -24,3 +36,12 @@ gaps outer -2
  
 # on|no_gaps (on=always activate and no_gaps=only activate if the gap size to the edge of the screen is 0)
 smart_borders on
+
+#
+# COLOR CONFIGURATION
+#
+# https://bbs.archlinux.org/viewtopic.php?pid=1557674#p1557674
+client.focused #00C1FF #00C1FF #000088 #00C1FF
+client.focused_inactive #2C2C2C #2C2C2C #ffffff #2C2C2C
+client.unfocused #2C2C2C #2C2C2C #ffffff #2C2C2C
+client.urgent #00C1FF #00C1FF #000088 #00C1FF
