--- a/i3.config
+++ b/i3.config
@@ -4,8 +4,8 @@
 bindsym $mod+d exec rofi -show run # comment out the line "bindsym $mod+d exec dmenu_run"
 exec_always feh --bg-scale /home/sysadm/Pictures/P0vh30i.jpg # https://imgur.com/gallery/Ytp5l
 exec_always vmware-user-suid-wrapper
-bindsym $mod+p spectacle -g
-exec_always compton -f --config /home/sysadm/.config/compton.conf
+bindsym $mod+p exec flameshot gui
+exec_always compton -b --config /home/sysadm/.config/compton.conf
 
 #
 # COMPTON CONFIG
@@ -26,6 +26,7 @@ exec_always compton -f --config /home/sysadm/.config/compton.conf
 for_window [class=".*"] border pixel 2
 bindsym $mod+t border normal 0 # toggle on normal border
 bindsym $mod+y border pixel 2 # toggle off normal border
+
 gaps inner 8
 gaps outer 2
 
