--- a/i3.config
+++ b/i3.config
@@ -5,17 +5,7 @@ bindsym $mod+d exec rofi -show run # comment out the line "bindsym $mod+d exec d
 exec_always feh --bg-scale /home/sysadm/Pictures/P0vh30i.jpg # https://imgur.com/gallery/Ytp5l
 exec_always vmware-user-suid-wrapper
 bindsym $mod+p exec flameshot gui
-exec_always compton -b --config /home/sysadm/.config/compton.conf
-
-#
-# COMPTON CONFIG
-# 
-# enter the following in ~/.config/compton.conf
-# use xprop to identify class
-# opacity-rule = [
-#   "90:class_g = 'Sublime_text' && focused",
-#   "80:class_g = 'Sublime_text' && !focused"
-# ];
+exec compton -b --config /home/sysadm/.config/compton.conf
 
 #
 # GAPPING CONFIGURATION
