--- a/compton.conf
+++ b/compton.conf
@@ -1,11 +1,19 @@
-# use xprop to identify class
-opacity-rule = [
-  "90:class_g = 'Sublime_text' && focused",
-  "80:class_g = 'Sublime_text' && !focused"
-];
+# Shadow
+shadow = true;
+no-dnd-shadow = true;
+no-dock-shadow = true;
+clear-shadow = true;
+shadow-radius = 12.0;
+shadow-offset-x = -12;
+shadow-offset-y = -12;
+shadow-opacity = 0.7;
 
-# 
-# https://github.com/xct/kali-clean/blob/main/.config/compton/compton.conf
+# Fading
+fading = true;
+fade-delta = 5;
+fade-in-step = 0.03;
+fade-out-step = 0.04;
+
 # Other
 backend = "xrender";
 mark-wmwin-focused = true;
@@ -21,7 +29,7 @@ paint-on-overlay = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
 # unredir-if-possible-exclude = [ ];
-#focus-exclude = [ "class_g = 'Cairo-clock'" ];
+focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = false;
 invert-color-include = [ ];
@@ -36,3 +44,16 @@ glx-swap-method = "undefined";
 # glx-use-gpushader4 = true;
 # xrender-sync = true;
 # xrender-sync-fence = true;
+
+# Window type settings
+wintypes:
+{
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+};
+
+opacity-rule = [
+	"85:class_g = 'Alacritty'",
+	"90:class_g = 'Code'",
+	"90:class_g = 'Sublime_text'"
+];
+
